--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "qk-json",
-  "version": "1.0.0",
+  "version": "1.2.1",
   "description": "js对json数据进行操作",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
     "url": "https://gitee.com/qukie/qk-json"
   },
   "keywords": [
-    "json"
+    "json",
+    "js",
+    "db"
   ],
   "author": "QuKin",
   "license": "Apache-2.0"
