--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qk-json",
-  "version": "1.2.3",
+  "version": "1.3.0",
   "description": "js对json数据进行操作,不止增删改查!",
   "main": "index.js",
   "scripts": {
@@ -19,7 +19,8 @@
     "delete",
     "change",
     "select",
-    "check"
+    "check",
+    "join"
   ],
   "author": "QuKin",
   "license": "Apache-2.0",
